<resources>
    <string name="app_name">Colour Creative</string>

    <string name="title_main_activity">Filter Type</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">have Fun with Colour Creative !!</string>
    <string name="label_less">less</string>
    <string name="label_more">more</string>
    <string name="screen_capture">screen capture</string>
    <string name="close">close</string>
    <string name="image_file">Image File</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="load">Load file</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
