<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_image_file"
            android:icon="@drawable/ic_image_file"
            android:title="@string/load"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_save"
            android:title="@string/save"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="ifRoom"/>
</menu>