<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#0099cc"
        tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/action_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <!-- The primary full-screen view.  -->
    <FrameLayout
            android:id="@+id/fullscreen_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
    />

    <!-- This FrameLayout insets its children based on system windows using
     android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
                style="?metaButtonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/black_overlay"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

            <ImageButton
                    android:id="@+id/btn_less"
                    android:contentDescription="@string/label_less"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_nav_left" />
            <TextView
                    android:id="@+id/txt_colour_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="Colour Name"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16sp"/>
            <ImageButton
                    android:id="@+id/btn_more"
                    android:contentDescription="@string/label_more"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_nav_right" />

            <ImageButton
                    android:id="@+id/btn_close"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/close"
                    android:onClick="close"
                    android:src="@drawable/ic_nav_close" />


        </LinearLayout>
    </FrameLayout>

</FrameLayout>